samples/_failures_safe/1761170914_db1c07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6fbdd3b.c: In function ‘main’:
./samples/SAFE/__tmp_b6fbdd3b.c:125:5: error: expected expression at end of input
  125 |     if (
      |     ^~
./samples/SAFE/__tmp_b6fbdd3b.c:125:5: error: expected declaration or statement at end of input
